# catarnith

./: .env.example  .gitignore  CONFIG.md  Cargo.toml  README.md  changelog.md  config.example.toml
src/: config.rs  jupiter.rs  keypair_source.rs  lib.rs  live.rs  market_data.rs  pyth.rs  quote_policy.rs  reporting.rs  tx_fetcher.rs  types.rs
src/analytics/: mod.rs
src/classifier/: mod.rs
src/curve/: mod.rs
src/curve_stream/: mod.rs
src/decoder/: mod.rs
src/discovery/: mod.rs
src/executor/: mod.rs
src/ingest/: mod.rs
src/journal/: mod.rs
src/market/: mod.rs
src/mayhem/: mod.rs
src/position/: mod.rs
src/pulse/: mod.rs
src/risk/: mod.rs
src/strategy/: mod.rs
src/survival/: mod.rs
src/tui/: ascii.rs  mod.rs  render.rs
tests/: config_profiles.rs  paper_executor.rs  research_replay.rs  strategy_guards.rs
tests/common/: mod.rs
